# fastapi-example

./: README.md  main.py  main_test.py  pyproject.toml
.devcontainer/: devcontainer.json
